--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="logo1.png" class="logo">
                 <ul class="links">
                     <li class="ctn1"><a href="#">HOME</li></a>
-                    <li><a href="#">DASHBOARD</li></a>                 
+                    <li><a href="https://kjba16.github.io/acabdashboard/">DASHBOARD</li></a>                 
                     
                     <li><a href="#">LOGOUT</li></a>
                     <li class="ctn"><a href="#">JOIN US</li></a>
