--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <nav class="navbar">
                 <img src="logo1.png" class="logo">
                 <ul class="links">
-                    <li class="ctn1"><a href="#">HOME</li></a>
+                    <li class="ctn1"><a href="https://kjba16.github.io/acabhome/">HOME</li></a>
                     <li><a href="https://kjba16.github.io/acabdashboard/">DASHBOARD</li></a>                 
                     
                     <li><a href="#">LOGOUT</li></a>
-                    <li class="ctn"><a href="#">JOIN US</li></a>
+                    <li class="ctn"><a href="https://kjba16.github.io/acabreg/">JOIN US</li></a>
 
                     </li>
                 </ul>
